fix: stale 兜底剔轮改按计划生命期判定，不再只认开仓轮与 positionId 命中